# edulens-backend

./: .gitignore  Readme.md
ai/: main.py  pyproject.toml
ai/ai/: face_recognizer.py
ai/models/: student.py
ai/utils/: database.py
api/: go.mod  go.sum
api/cmd/: main.go
api/pkg/database/: db.go
api/pkg/handlers/: attendance.go  class.go  images.go
api/pkg/log/: log.go
api/pkg/middleware/: auth.go  cors.go
api/pkg/models/: attendance.go  class.go
api/pkg/repository/: attendance.go  class.go
api/pkg/router/: router.go
api/pkg/script/: schema.sql  setup-db.sh
api/pkg/services/: attendance.go  class.go
api/pkg/utils/: json_response.go  req_validation.go
api/test/: attendance_service_test.go
docs/: api-introduction.md  attendance.md  class.md  database.mdx
